cmake_minimum_required(VERSION 3.27)
project(cpp_playground_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_playground_2 main.cpp
        TICPP_VOL1/ch_2/StreamTICPP.cpp
        TICPP_VOL1/ch_2/headers/StreamTICPP.h
        TICPP_VOL1/ch_2/HelloStringsTICPP.cpp
        TICPP_VOL1/ch_2/headers/HelloStringsTICPP.h
        TICPP_VOL1/ch_2/ScopyTICPP.cpp
        TICPP_VOL1/ch_2/headers/ScopyTICPP.h
        TICPP_VOL1/ch_2/FillStringTICPP.cpp
        TICPP_VOL1/ch_2/headers/FillStringTICPP.h
        TICPP_VOL1/ch_2/FillVectorTICPP.cpp
        TICPP_VOL1/ch_2/headers/FillVectorTICPP.h
        TICPP_VOL1/ch_2/GetWordsTICPP.cpp
        TICPP_VOL1/ch_2/headers/GetWordsTICPP.h
        TICPP_VOL1/ch_2/IntVectorTICPP.cpp
        TICPP_VOL1/ch_2/headers/IntVectorTICPP.h
        TICPP_VOL1/ch_3/MenuTICPP.cpp
        TICPP_VOL1/ch_3/headers/MenuTICPP.h
        TICPP_VOL1/ch_3/Menu2TICPP.cpp
        TICPP_VOL1/ch_3/headers/Menu2TICPP.h
        TICPP_VOL1/ch_3/CatsInHatsTICPP.cpp
        TICPP_VOL1/ch_3/headers/CatsInHatsTICPP.h
        TICPP_VOL1/ch_3/SpecifyTICPP.cpp
        TICPP_VOL1/ch_3/headers/SpecifyTICPP.h
        TICPP_VOL1/ch_3/PassByValueTICPP.cpp
        TICPP_VOL1/ch_3/headers/PassByValueTICPP.h
        TICPP_VOL1/ch_3/PassByAddressTICPP.cpp
        TICPP_VOL1/ch_3/headers/PassByAddressTICPP.h
        TICPP_VOL1/ch_3/PassByReferenceTICPP.cpp
        TICPP_VOL1/ch_3/headers/PassByReferenceTICPP.h
        TICPP_VOL1/ch_3/VoidPointerTICPP.cpp
        TICPP_VOL1/ch_3/headers/VoidPointerTICPP.h
        TICPP_VOL1/ch_3/MathopsTICPP.cpp
        TICPP_VOL1/ch_3/headers/MathopsTICPP.h
        TICPP_VOL1/ch_3/printBinaryTICPP.cpp
        TICPP_VOL1/ch_3/headers/printBinaryTICPP.h
        TICPP_VOL1/ch_3/BitwiseTICPP.cpp
        TICPP_VOL1/ch_3/headers/BitwiseTICPP.h
        TICPP_VOL1/ch_3/StaticCastTICPP.cpp
        TICPP_VOL1/ch_3/headers/StaticCastTICPP.h
        TICPP_VOL1/ch_3/ReinterpretCastTICPP.cpp
        TICPP_VOL1/ch_3/headers/ReinterpretCastTICPP.h
        TICPP_VOL1/ch_3/SimpleStructTICPP.cpp
        TICPP_VOL1/ch_3/headers/SimpleStructTICPP.h
        TICPP_VOL1/ch_3/ArraysIntroTICPP.cpp
        TICPP_VOL1/ch_3/headers/ArraysIntroTICPP.h
        TICPP_VOL1/ch_3/PointerIncrementTICPP.cpp
        TICPP_VOL1/ch_3/headers/PointerIncrementTICPP.h
        TICPP_VOL1/ch_3/PointerArithmeticTICPP.cpp
        TICPP_VOL1/ch_3/headers/PointerArithmeticTICPP.h
        TICPP_VOL1/ch_3/PointerToFunctionTICPP.cpp
        TICPP_VOL1/ch_3/headers/PointerToFunctionTICPP.h
        TICPP_VOL1/ch_3/FunctionTableTICPP.cpp
        TICPP_VOL1/ch_3/headers/FunctionTableTICPP.h
        TICPP_VOL1/ch_4/ClibDemoTICPP.cpp
        TICPP_VOL1/ch_4/headers/ClibDemoTICPP.h
        TICPP_VOL1/ch_4/Clib2DemoTICPP.cpp
        TICPP_VOL1/ch_4/headers/Clib2DemoTICPP.h
        TICPP_VOL1/ch_4/SizeOfStructTICPP.cpp
        TICPP_VOL1/ch_4/headers/SizeOfStructTICPP.h
        TICPP_VOL1/ch_4/StackNestedTICPP.cpp
        TICPP_VOL1/ch_4/headers/StackNestedTICPP.h
        TICPP_VOL1/ch_5/PublicStructTICPP.cpp
        TICPP_VOL1/ch_5/headers/PublicStructTICPP.h
        TICPP_VOL1/ch_5/PrivateStructTICPP.cpp
        TICPP_VOL1/ch_5/headers/PrivateStructTICPP.h
        TICPP_VOL1/ch_5/FriendStructTICPP.cpp
        TICPP_VOL1/ch_5/headers/FriendStructTICPP.h
        TICPP_VOL1/ch_5/NestedFriendTICPP.cpp
        TICPP_VOL1/ch_5/headers/NestedFriendTICPP.h
        TICPP_VOL1/ch_5/ClassDemoTICPP.cpp
        TICPP_VOL1/ch_5/headers/ClassDemoTICPP.h
        TICPP_VOL1/ch_5/StashClassTICPP.cpp
        TICPP_VOL1/ch_5/headers/StashClassTICPP.h
        TICPP_VOL1/ch_5/HandleDemoTICPP.cpp
        TICPP_VOL1/ch_5/headers/HandleDemoTICPP.h
        TICPP_VOL1/ch_2/CH2SolutionsTICPP.cpp
        TICPP_VOL1/ch_2/headers/CH2SolutionsTICPP.h
        TICPP_VOL1/ch_6/Stash2Ch6.cpp
        TICPP_VOL1/ch_6/headers/Stash2Ch6.h
        TICPP_VOL1/ch_6/StackCh6.cpp
        TICPP_VOL1/ch_6/headers/StackCh6.h
        TICPP_VOL1/ch_6/MultiArgsDemo.cpp
        TICPP_VOL1/ch_6/headers/MultiArgsDemo.h
        TICPP_VOL1/ch_11/FreeStandingReferences.cpp
        TICPP_VOL1/ch_11/headers/FreeStandingReferences.h
        TICPP_VOL1/ch_11/ReferenceDemo.cpp
        TICPP_VOL1/ch_11/headers/ReferenceDemo.h
        TICPP_VOL1/ch_11/HowMany2Demo.cpp
        TICPP_VOL1/ch_11/headers/HowMany2Demo.h
        TICPP_VOL1/ch_11/DefaultCopyConstructor.cpp
        TICPP_VOL1/ch_11/headers/DefaultCopyConstructor.h
        TICPP_VOL1/ch_11/PointerToMemberData.cpp
        TICPP_VOL1/ch_11/headers/PointerToMemberData.h
        TICPP_VOL1/ch_13/MallocClassDemo.cpp
        TICPP_VOL1/ch_13/headers/MallocClassDemo.h
        TICPP_VOL1/ch_13/Tree2Demo.cpp
        TICPP_VOL1/ch_13/headers/Tree2Demo.h
        TICPP_VOL1/ch_13/PStash.cpp
        TICPP_VOL1/ch_13/headers/PStash.h
        TICPP_VOL1/ch_14/NameHiding.cpp
        TICPP_VOL1/ch_14/headers/NameHiding.h
        TICPP_VOL1/ch_14/StringStack.cpp
        TICPP_VOL1/ch_14/headers/StringStack.h
        TICPP_VOL1/ch_14/GameBoardDemo.cpp
        TICPP_VOL1/ch_14/headers/GameBoardDemo.h
        TICPP_VOL1/ch_14/Car.cpp
        TICPP_VOL1/ch_14/headers/Car.h
        TICPP_VOL1/classEx/StackC1.cpp
        TICPP_VOL1/classEx/headers/StackC1.h
        TICPP_VOL1/ch_14/FName1.cpp
        TICPP_VOL1/ch_14/headers/FName1.h
        TICPP_VOL1/ch_14/PrivateInheritance.cpp
        TICPP_VOL1/ch_14/headers/PrivateInheritance.h
        TICPP_VOL1/ch_14/ProtectedDemo.cpp
        TICPP_VOL1/ch_14/headers/ProtectedDemo.h
        TICPP_VOL1/ch_14/ByteDemo.cpp
        TICPP_VOL1/ch_14/headers/ByteDemo.h
        TICPP_VOL1/ch_14/headers/Byte2.h
        TICPP_VOL1/ch_14/CopyConstructorDemo.cpp
        TICPP_VOL1/ch_14/headers/CopyConstructorDemo.h
        TICPP_VOL1/ch_15/InstrumentWithVirtual.cpp
        TICPP_VOL1/ch_15/headers/InstrumentWithVirtual.h
        TICPP_VOL1/ch_15/PureVirtualDefinitions.cpp
        TICPP_VOL1/ch_15/headers/PureVirtualDefinitions.h
        TICPP_VOL1/ch_15/AddingVirtuals.cpp
        TICPP_VOL1/ch_15/headers/AddingVirtuals.h
        TICPP_VOL1/ch_15/ObjectSlicing.cpp
        TICPP_VOL1/ch_15/headers/ObjectSlicing.h
        TICPP_VOL1/ch_15/OverloadingAndOverridingAndVirtuals.cpp
        TICPP_VOL1/ch_15/headers/OverloadingAndOverridingAndVirtuals.h
        TICPP_VOL1/ch_15/VariantReturn.cpp
        TICPP_VOL1/ch_15/headers/VariantReturn.h
        TICPP_VOL1/ch_15/VirtualDestructors.cpp
        TICPP_VOL1/ch_15/headers/VirtualDestructors.h
        TICPP_VOL1/ch_15/PureVirtualDestructors.cpp
        TICPP_VOL1/ch_15/headers/PureVirtualDestructors.h
        TICPP_VOL1/ch_15/OStack.cpp
        TICPP_VOL1/ch_15/headers/OStack.h
        TICPP_VOL1/ch_15/OperatorPolymorphism.cpp
        TICPP_VOL1/ch_15/headers/OperatorPolymorphism.h)
